# sodoku

./: Cargo.toml
src/: main.rs
testdata/: simple.txt
